Documentation
Documentation for the entities package, Game and SettingsController